[package]
name = "sma-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description="Simple Moving Average (SMA) Implementation In Rust"
repository="https://github.com/immortalinfidel/sma-rs.git"
homepage="https://github.com/immortalinfidel/sma-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = { version = "0.1.0" }